# PearlyWhite

./: CMakeLists.txt  README.md
data/: teeth.txt
src/: dicm.cpp  dicm.h  dicom.cpp  dicom.h  filter.cpp  filter.h  histogram.cpp  histogram.h  indicator.cpp  indicator.h  inputParser.h  main.cpp  trackbarThresholder.cpp  trackbarThresholder.h
